*Empty MediaWiki Message*

--- a/Thanh_Hoa_Lalawigan.mw
+++ b/Thanh_Hoa_Lalawigan.mw
@@ -7,7 +7,7 @@
 |motto                  = 
 |image_skyline          =Le Loi statue1.jpg
 |imagesize              = 300px
-|image_caption          = [[Le Loi]] statue
+|image_caption          = [[Le Loi]] statua
 |image_flag             = 
 |flag_size              =
 |image_seal             = 
@@ -24,16 +24,16 @@
 |pushpin_mapsize=300
 |subdivision_type       = Country
 |subdivision_name       = {{flag|Vietnam}}
-|subdivision_type1      = [[Provinces of Vietnam|Province]]
-|subdivision_name1      = [[Thanh Hóa Province]]
+|subdivision_type1      = [[Provinces of Vietnam|Lalawigan]]
+|subdivision_name1      = [[Thanh Hóa Lalawigan]]
 |subdivision_type2      = 
 |subdivision_name2      = 
 |subdivision_type3      = 
 |subdivision_name3      = 
 |subdivision_type4      = 
 |subdivision_name4      = 
-|government_type        = Municipality
-|leader_title1          = Party Secretary
+|government_type        = Municipalidad
+|leader_title1          = Partidung Kalihim
 |leader_name1           = 
 |leader_title2          = People's Committee Chairman:
 |leader_name2           = Nguyễn Xuân Phi
@@ -45,7 +45,7 @@
 |leader_name5           =
 |established_title      = 
 |established_date       = 
-|established_title2     =  Founded
+|established_title2     =  Mitatag
 |established_date2      = 1994
 |established_title3     =  <!-- Incorporated (city) -->
 |established_date3      = 
@@ -94,13 +94,13 @@
 |footnotes              = 
 }}
 {{for|the town in Quang Binh Province|Thanh Hóa, Quang Binh}}
-''' Thanh Hóa ''' is the capital city of [[Vietnam]]'s [[Thanh Hóa Province]]. The population of Thanh Hóa city is nearly 200,000 with an area of only 57.9 square kilometers.
+Ing ''' Thanh Hóa ''' iya ing kabisera (tungkung)lakanbalen ning [[Thanh Hóa Lalawigan]] ning Vietnam. Ing populasiun ning  Thanh Hóa lakanbalen mga 200,000 nung nu atun yang lualas a 57.9 kilometru kuadradu.
 
-The city is located south of the [[Red River (Vietnam)|Red River]] (Sông Hồng) delta region, about 137 km south of [[Hanoi]], on a small tributary of the [[Ma River]](Sông Mã). Thanh Hóa is linked with Hanoi by road and railway and considered to be a growing trade and industrial center. Agriculture, forestry and fishery are being developed here.
+Ing lakanbalen aitu mauli ning [[Red River (Vietnam)|Malutung Ilug]] (Sông Hồng) delta labuad, mga 137 km mauli ning  [[Hanoi]], keng malating (tributary) ning [[Ilug Ma]](Sông Mã). Ing Thanh Hóa makataid ya keng Hanoi kapamilatan ning dalan ampong rilis at mabibilang yang dargul ing kayang kalakal ampo bilang kalibudtan na ning industria.  
 
-During [[Vietnam War]], US strategic bombing destroyed much of the buildings and infrastructure, the whole city has been totally rebuilt since then. 
+Iniang [[Gerang Vietnam]], ing US memomba ya keni at dakal kareng pakatalakad ampo infrastructura mengasira la, ing kabilugan a lakanbalen gewa at mitalakad yang pasibayu. 
 
-Thanh Hóa has the Hoang Long Antique [[Museum]], and the large [[Roman Catholic]] [[Cathedral]] of the [[Immaculate Conception]] with active services. 
+Ing Thanh Hóa atin yang Hoang Long Antique [[Museum]], ampong maragul a [[Romanu Catholicu]]ng [[Cathedral]] na ning [[Immaculate Conception]] nung nu gagamitan de pa. 
 {{coord|19|48|27|N|105|46|35|E|region:VN_type:city|display=title}}
 {{commonscat-inline|Thanh Hoa}}
 {{ThanhHoa-geo-stub}}
@@ -113,52 +113,12 @@ Thanh Hóa has the Hoang Long Antique [[Museum]], and the large [[Roman Catholic
 [[Category:Lalawigan tungku king Vietnam]]
 [[Category:Distritu ning Thanh Hoa Lalawigan]]
 
-[[ace:Thanh Hoa]]
-[[ak:Thanh Hoa]]
-[[ast:Thanh Hoa]]
-[[ay:Thanh Hoa]]
-[[bar:Thanh Hoa]]
-[[bi:Thanh Hoa]]
-[[bs:Thanh Hoa]]
-[[bug:Thanh Hoa]]
-[[ceb:Thanh Hoa]]
-[[chy:Thanh Hoa]]
-[[da:Thanh Hoa]]
-[[diq:Thanh Hoa]]
+
 [[en:Thanh Hóa]]
-[[eo:Thanh Hoa]]
-[[eu:Thanh Hoa]]
-[[fr:Thanh Hóa]]
-[[hif:Thanh Hoa]]
-[[ht:Thanh Hoa]]
-[[ia:Thanh Hoa]]
-[[ie:Thanh Hoa]]
-[[ig:Thanh Hoa]]
-[[kab:Thanh Hoa]]
-[[kl:Thanh Hoa]]
-[[kw:Thanh Hoa]]
-[[la:Thanh Hoa]]
-[[lg:Thanh Hoa]]
-[[lij:Thanh Hoa]]
-[[lt:Tanhoa]]
-[[mi:Thanh Hoa]]
-[[nds:Thanh Hoa]]
-[[nds-nl:Thanh Hoa]]
-[[nl:Thanh Hóa (stad in Thanh Hóa)]]
+[[nl:Thanh Hóa]]
 [[no:Thanh Hoa]]
-[[pag:Thanh Hoa]]
 [[pl:Thanh Hóa]]
-[[ru:Тханьхоа]]
-[[rw:Thanh Hoa]]
-[[sg:Thanh Hoa]]
 [[sv:Thanh Hoa]]
-[[sw:Thanh Hoa]]
-[[tg:Тан Ноа]]
-[[tl:Thanh Hoa]]
-[[uk:Тханхоа]]
+[[tg:Вилояти Тан Ноа]]
 [[vi:Thanh Hóa (thành phố)]]
-[[vo:Thanh Hoa]]
-[[wa:Thanh Hoa]]
 [[war:Thanh Hoa]]
-[[wo:Thanh Hoa]]
-[[zh:清化市]]
