*Empty MediaWiki Message*

--- a/Thanh_Hoa_Lalawigan.mw
+++ b/Thanh_Hoa_Lalawigan.mw
@@ -22,7 +22,7 @@
 |pushpin_map            = Vietnam<!-- the name of a location map as per http://en.wikipedia.org/wiki/Template:Location_map -->
 |pushpin_label_position = <!-- the position of the pushpin label: left, right, top, bottom, none -->
 |pushpin_mapsize=300
-|subdivision_type       = Country
+|subdivision_type       = Bangsa
 |subdivision_name       = {{flag|Vietnam}}
 |subdivision_type1      = [[Provinces of Vietnam|Lalawigan]]
 |subdivision_name1      = [[Thanh Hóa Lalawigan]]
