*Empty MediaWiki Message*

--- a/Paul_Zane_Pilzer.mw
+++ b/Paul_Zane_Pilzer.mw
@@ -31,11 +31,11 @@ I '''Paul Zane Pilzer''' (mibait Enero 17, 1954) metung yang [[ekonomista]]ng Am
 | PLACE OF DEATH    =
 }}
 {{DEFAULTSORT:Pilzer, Paul Zane}}
-[[Category:1954 births]]
+[[Category:1954 kebaitan]]
 [[Category:American businesspeople]]
 [[Category:American economists]]
-[[Category:American writers]]
-[[Category:Living people]]
+[[Category:American talasulat]]
+[[Category:Mabieng tau]]
 
 
 [[en:Paul Zane Pilzer]]
