*Empty MediaWiki Message*

--- a/Paul_Zane_Pilzer.mw
+++ b/Paul_Zane_Pilzer.mw
@@ -34,7 +34,7 @@ I '''Paul Zane Pilzer''' (mibait Enero 17, 1954) metung yang [[ekonomista]]ng Am
 [[Category:1954 kebaitan]]
 [[Category:American businesspeople]]
 [[Category:American economists]]
-[[Category:American talasulat]]
+[[Category:Americanu talasulat]]
 [[Category:Mabieng tau]]
 
 
