*Empty MediaWiki Message*

--- a/George_Armstrong_Custer.mw
+++ b/George_Armstrong_Custer.mw
@@ -35,9 +35,9 @@
 |awards=
 |laterwork=
 }}
-I ''' George Armstrong Custer''' (Diciembre 5, 1839 – Junio 25, 1876) metung yang manungkulan militar (''officer'') [[Ukbu ning Estados Unidos]] ([[United States Army]]) ampong komander a  [[cavalry]] king [[Gerang Sibil a Americanu]] (American Civil War) ampo reng [[Gerang Indian]]. and the ([[Indian Wars]]). Meragul ya [[Michigan]] ampong [[Ohio]], i Custer, a mekalub king [[United States Military Academy|West Point]] anyang 1858, nung nu tauli ya king kayang klasi anyang miyari ya. Nanupata, anyang mikalabkab ing Gerang Sibil, kailangan la reng malyaring maging manungkulan o opisyal, at mituldu yang magsilbi king Ukbung Union.
+I ''' George Armstrong Custer''' (Diciembre 5, 1839 – Junio 25, 1876) metung yang manungkulan militar (''officer'') [[Ukbu ning Estados Unidos]] ([[United States Army]]) ampong komander a  [[cavalry]] king [[Gerang Sibil a Americanu]] (American Civil War) ampo reng [[Gerang Indian]]. Meragul ya king [[Michigan]] ampong [[Ohio]], i Custer, a mekalub king [[United States Military Academy|West Point]] anyang 1858, nung nu tauli ya king kayang klasi anyang miyari ya. Nanupata, anyang mikalabkab ing Gerang Sibil, kailangan la reng malyaring maging manungkulan o opisyal, at mituldu yang magsilbi king Ukbung Union.
 
-Masanting ing meging reputasyun nang Custer king Gerang Sibil. Linaban ya king mumunang manimunang laban, ing [[First Battle of Bull Run]]. Misulung ya ing kayang karera uling king kayang pamiyabe kareng mangatas a manungkulan, pati na ing kayang tagumpe antimong taganang matalab o epektibung komander o talapanibala da reng makakabayu (''highly effective cavalry commander''). Bandang tauli, mitas ya ranggu king pansamantalang ranggung ([[Brevet (military)|brevet]]) of [[major general]] i Custer. (Kayari ning gera, mibalik ya king kayang permanenting ranggu ning kapitan.) Kaybat ning [[Appomattox Campaign]], nung nu maragul ampong maulaga king kelualan ning laban i Custer ampo reng kayang sundalus, atsu i Custer bang tanggap king pamanyuku nang [[Heneral (CSA)|Heneral]] [[Robert E. Lee]].
+Masanting ing meging reputasyun nang Custer king Gerang Sibil. Linaban ya king mumunang manimunang laban, ing [[Mumunang laban ning Bull Run]]. Misulung ya ing kayang karera uling king kayang pamiyabe kareng mangatas a manungkulan, pati na ing kayang tagumpe antimong taganang matalab o epektibung komander o talapanibala da reng makakabayu (''highly effective cavalry commander''). Bandang tauli, mitas ya ranggu king pansamantalang ranggung ([[Brevet (military)|brevet]]) of [[major general]] i Custer. (Kayari ning gera, mibalik ya king kayang permanenting ranggu ning kapitan.) Kaybat ning [[Appomattox Campaign]], nung nu maragul ampong maulaga king kelualan ning laban i Custer ampo reng kayang sundalus, atsu i Custer bang tanggap king pamanyuku nang [[Heneral (CSA)|Heneral]] [[Robert E. Lee]].
 
 Kaybat ning Gerang Sibil, miparla ya i Custer king [[albugan]] bang lumaban king [[Gerang Indian]]. Mengatakpan la king mituran kalamidad a tawling nang laban deng kayang meging tagumpe. Mete ya i Custer ampo reng eganagana nang tauan king [[Laban ning Little Bighorn]] (''Battle of the Little Bighorn'') anyang 1876, king metung a laban king aliansa da reng tribung natibung Americanu a sinikat lagyu king amlat a Americanu antimong "Custer's Last Stand".
 
