*Empty MediaWiki Message*

--- a/George_Armstrong_Custer.mw
+++ b/George_Armstrong_Custer.mw
@@ -5,7 +5,7 @@
 |death_date= {{Death date and age|1876|6|25|1839|12|5}}
 |birth_place= [[New Rumley, Ohio]]
 |death_place=[[Little Bighorn Battlefield National Monument|Little Bighorn, Montana]]
-|placeofburial= initially on the battlefield<br />later reinterred in [[West Point Cemetery]]
+|placeofburial= mumuna yang milibing king lugal ning laban<br />kaibat, miyalis ya king [[West Point Cemetery]]
 |placeofburial_label= Lugal ning libingan
 |image= Custer Portrait Restored.jpg
 |caption=
