*Empty MediaWiki Message*

--- a/Find_a_Grave.mw
+++ b/Find_a_Grave.mw
@@ -3,7 +3,7 @@
 | screenshot = [[File:buryicon.jpg|200px]]
 | name = Find A Grave
 | origin =
-| commercial = Yes
+| commercial = Wa
 | alexa =
 | type = Online database
 | registration = Optional
@@ -11,7 +11,7 @@
 | author =
 | language = [[English language|English]]
 | launch date = {{Start date|1998}}
-| current status = Active
+| current status = Aktibu
 | url = [http://www.findagrave.com/ www.findagrave.com]
 | alexa = 4,116 ({{as of|2012|8|2|alt=August 2012}})<ref name="alexa">{{cite web|url= http://www.alexa.com/siteinfo/findagrave.com |title= Findagrave.com Site Info | publisher= [[Alexa Internet]] |accessdate= 2012-08-02 }}</ref><!--Updated monthly by OKBot.-->
 }}
