pamaglikas ning "commercial"

--- a/Template:Infobox_Website.mw
+++ b/Template:Infobox_Website.mw
@@ -7,7 +7,7 @@
 | data1   = {{{url|}}}
 | label2  = [[Slogan]]
 | data2   = {{{slogan|}}}
-| label3  = Commercial?
+| label3  = Pangnegosyu?
 | data3   = {{{commercial|}}}
 | label4  = Uri ning karinan (''Type of site'')
 | data4   = {{{type|}}}
