*Empty MediaWiki Message*

--- a/Marcel_Knobil.mw
+++ b/Marcel_Knobil.mw
@@ -42,3 +42,6 @@ Linto ne i Marcel king [[BBC]], [[British Sky Broadcasting|Sky Television]] ampo
 [[Category:Year of birth missing (living people)]]
 [[Category:Living people]]
 [[Category:Branding consultants]]
+
+
+[[en:Marcel Knobil]]
