r2.7.2) (robot dinagdag: [[ilo:Guyana]]

--- a/Guyana.mw
+++ b/Guyana.mw
@@ -133,6 +133,7 @@ Ing '''Guyana''' ({{pronEng|ɡaɪˈænə}} or {{IPA|/ɡiːˈɑːnə/}}), opisyal
 [[ia:Guyana]]
 [[id:Guyana]]
 [[ie:Guyana]]
+[[ilo:Guyana]]
 [[io:Guyana]]
 [[is:Gvæjana]]
 [[it:Guyana]]
