*Empty MediaWiki Message*

--- a/Alpabetung_Koreanu.mw
+++ b/Alpabetung_Koreanu.mw
@@ -27,7 +27,7 @@ Image:一 (eu) stroke order.png     | ㅡ (eu)
 Image:| (i) stroke order.png      | | (i)
 </gallery>
 
-==Lagyu da reng katinig==
+===Lagyu da reng katinig===
 {| class="wikitable"
 |-
 ! Katinig !! Lagyu
@@ -78,7 +78,7 @@ Image:| (i) stroke order.png      | | (i)
 | ㅉ || ''ssangjieut'' (쌍지읒) || ''toenjiŭt'' (된지읒)
 |}
 
-==Lagyu da reng Patinig==
+===Lagyu da reng Patinig===
 {| class=wikitable
 |-
 ! Titik !! Lagyu !! Titik !! Lagyu
