Replacing Mont.jpg with [[File:Old_Port_of_Montreal_(French-_Vieux-Port_de_Montréal).jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: #3).

--- a/Quebec.mw
+++ b/Quebec.mw
@@ -61,7 +61,7 @@ Makasepu ya keng albugan king [[lalawigan]] ning [[Ontario]], [[James Bay]] at [
 |[[Montreal]] 
 |1 812 723
 |1 774 846
-|[[File:Mont.jpg|180px]]
+|[[File:Old Port of Montreal (French- Vieux-Port de Montréal).jpg|180px]]
 |-
 |[[Quebec Lakanbalen]] (provincial capital)
 |532 329
