*Empty MediaWiki Message*

--- a/Darmstadt.mw
+++ b/Darmstadt.mw
@@ -4,7 +4,7 @@
 |Art                = City
 |image_photo        = Luisenplatz.jpg
 |image_caption      = 
-|Wappen             = Wappen Darmstadt.png
+|Wappen             = Wappen Darmstadt.svg
 |lat_deg            = 49 | lat_min = 52 | lat_sec = 0
 |lon_deg            = 8 | lon_min = 39 | lon_sec = 0
 |Lageplan           = 
