--- a/Henry_Lau.mw
+++ b/Henry_Lau.mw
@@ -7,7 +7,7 @@
 |mr= Yu Hŏnhwa/Helli
 |color=khaki
 }}
-I '''Henry Lau''' (Oktubri 11, 1989, [[Toronto]], [[Ontario]]), mas mekilala yang '''Henry''', metung yang kompositor, talakanata at talaterak king [[Mauling Korea]].
+I '''Henry Lau''' (Oktubri 11, 1989, [[Toronto]], [[Ontario]]), mas mekilala yang '''Henry''', metung yang kompositor, talakanata at talaterak king [[Mauling Korea]]. Metung yang miyembru ning [[Super Junior-M]].
 
 ==Diskograpiya==
 {{col-begin}}
