Lilipat ya king [[Papa Piu VI]]

--- a/Pope_Pius_VI.mw
+++ b/Pope_Pius_VI.mw
@@ -1,2 +1,1 @@
-{{delete|redundant or broken redirect - [[User:NahidSultan|NahidSultan]] ([[User talk:NahidSultan|talk]]) 15:35, 29 Disiembri 2014 (UTC)}}
-#Redirect [[Papa Pio VI]]
+#REDIRECT [[Papa Piu VI]]
