*Empty MediaWiki Message*

--- a/Jessica_Jung.mw
+++ b/Jessica_Jung.mw
@@ -1,3 +1,5 @@
+{{Korean name|Jung}}
+
 I '''Jessica Sooyoun Jung''' ([[Amanung Koreanu|Koreanu]]: 정수연, [[Hanja]]: 鄭秀妍, Jung Sooyeon, Abril 18, 1989, [[San Francisco, California|San Francisco]], [[California]]), mas mekilala yang '''Jessica''', metung yang artista, talakanta, talaterak at negosyanti king [[Mauling Korea]]. Kanita, megi yang miyembru ning [[Girls' Generation]].
 
 ==Suglung Palwal==
