*Empty MediaWiki Message*

--- a/Lee_Dong_Wook.mw
+++ b/Lee_Dong_Wook.mw
@@ -1,3 +1,4 @@
+{{Korean name|Lee}}
 I '''Lee Dong Wook''' (이동욱, Tsinu: 李東旭), metung yang [[artista]] ampong [[modelu]] king [[Mauling Korea]].
 
 == Pilmograpiya ==
