*Empty MediaWiki Message*

--- a/Joo_Ji_Hoon.mw
+++ b/Joo_Ji_Hoon.mw
@@ -1,3 +1,4 @@
+{{Korean name|Joo}}
 I '''Joo Ji Hoon''' (Hangul: 주지훈, Hanja: 朱智勛), metung yang artista king [[Mauling Korea]].
 
 == Kawing Panluwal ==
