*Empty MediaWiki Message*

--- a/Yoon_Joo-sang.mw
+++ b/Yoon_Joo-sang.mw
@@ -3,3 +3,5 @@
 I '''Yoon Joo-sang''' ([[Hangul]]: 윤주상, [[Hanja]]: 尹周相), metung yang artista king [[Mauling Korea]].
 
 {{stub|Mauling Korea}}
+
+[[Category:Deng artista king Mauling Korea]]
