*Empty MediaWiki Message*

--- a/Kim_Soo-hyun.mw
+++ b/Kim_Soo-hyun.mw
@@ -1,3 +1,4 @@
+{{Korean name|Kim}}
 I '''Kim Soo-hyun''' ([[Hangul]]: 김수현, [[Hanja]]: 金秀賢; mibait Pebreru 16, 1988), metung yang artista ampo modelu king [[Mauling Korea]]. Mas mekilala ya kareng papel na king [[Dream High]], [[Moon Embracing the Sun]] at [[My Love from the Star]].
 
 ==Kawing Palwal==
