*Empty MediaWiki Message*

--- a/Template:Korean_name.mw
+++ b/Template:Korean_name.mw
@@ -1,4 +1,6 @@
-:''Metung yang [[lagyung Koreanu]] ni; '''{{{1}}}''' ya'y apelyidu.''<noinclude>
+:''Metung yang [[lagyung Koreanu]] ni; '''{{{1}}}''' ya'y apelyidu.''
+[[Category:Deng Koreanu]]
+<noinclude>
 
 
 ==Pamag-gamit==
