*Empty MediaWiki Message*

--- a/Template:Korean_name.mw
+++ b/Template:Korean_name.mw
@@ -1,5 +1,5 @@
 :''Metung yang [[lagyung Koreanu]] ni; '''{{{1}}}''' ya'y apelyidu.''
-[[Category:Deng Koreanu]]
+<include>[[Category:Deng Koreanu]]</include>
 <noinclude>
 
 
