*Empty MediaWiki Message*

--- a/Template:Korean_name.mw
+++ b/Template:Korean_name.mw
@@ -8,5 +8,6 @@ Inilalagay ang suleras na ito sa itaas ng lathalaing pangtalambuhay upang ipaliw
 [[Category:Surname disambiguation templates|{{PAGENAME}}]]
 [[Category:Korea-related Wikipedia disambiguation tools|{{PAGENAME}}]]
 
+[[en:Template:Korean name]]
 [[ja:Template:韓国の人物]]
 </noinclude>
