*Empty MediaWiki Message*

--- a/Jackson_Wang.mw
+++ b/Jackson_Wang.mw
@@ -1,3 +1,4 @@
+{{Chinese name|Wang}}
 I '''Jackson Wang''' (mibait Marsu 28, [[1994]], [[Hong Kong]]), metung yang talaterak at talakanta king [[Mauling Korea]]. Mas mekilala yang miyembru ning [[GOT7]].
 
 {{stub}}
