*Empty MediaWiki Message*

--- a/Template:Chinese_name.mw
+++ b/Template:Chinese_name.mw
@@ -1,2 +1,2 @@
-:''[[Lagiung Isik]] ya ini; ing  [[Chinese surname|apelidu]] na ''{{{1}}}''{{#if:{{{2|}}}|&#32;and ''{{{2}}}'' is a [[generation name]]}}.''<noinclude>
+:''Metung yang [[lagyung Tsinu]] ni; '''{{{1}}}''' ya'y apelyidu''{{#if:{{{2|}}}|&#32;and ''{{{2}}}'' is a [[generation name]]}}.'''<noinclude>
 {{Documentation}}</noinclude>
