--- a/Jung_Eui_Chul.mw
+++ b/Jung_Eui_Chul.mw
@@ -1,6 +1,6 @@
 [[Image:jeongeuicheol.jpg|thumb|right]]
 
-I '''Jeong Eui Cheol''' ([[Amanung Koreanu|Koreanu]]: 정의철) metung yang modelo at artista king [[Mauling Korea]].
+I '''Jeong Eui-chul''' ([[Amanung Koreanu|Koreanu]]: 정의철) metung yang modelu at artista king [[Mauling Korea]].
 
 ==Talang-palwal==
 ===Deng drama===
@@ -18,3 +18,4 @@ I '''Jeong Eui Cheol''' ([[Amanung Koreanu|Koreanu]]: 정의철) metung yang mod
 *[http://www.hancinema.net/korean Jeong Ee-cheol.php HanCinema]
 
 [[Category:Ding artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
