--- a/Joo_Ji_Hoon.mw
+++ b/Joo_Ji_Hoon.mw
@@ -11,3 +11,4 @@ I '''Joo Ji Hoon''' (Hangul: 주지훈, Hanja: 朱智勛), metung yang artista k
 {{stub}}
 
 [[Category:Ding artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
