--- a/Yoon_Eun-hye.mw
+++ b/Yoon_Eun-hye.mw
@@ -27,6 +27,7 @@ I '''Yoon Eun Hye''' (Hangul: ''윤은혜'', Hanja:''尹恩惠'') metung yang ar
 * [http://www.eunhye1003.com/ Yoon Eun Hye Official Fanclub Neri]
 
 {{stub}}
-]
+
 
 [[Category:Ding artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
