--- a/Jessica_Jung.mw
+++ b/Jessica_Jung.mw
@@ -9,3 +9,4 @@ I '''Jessica Sooyoun Jung''' ([[Amanung Koreanu|Koreanu]]: 정수연, [[Hanja]]:
 {{Suli}}
 
 [[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
