--- a/Kim_Soo-hyun.mw
+++ b/Kim_Soo-hyun.mw
@@ -7,3 +7,4 @@ I '''Kim Soo-hyun''' ([[Hangul]]: 김수현, [[Hanja]]: 金秀賢; mibait Pebrer
 {{stub}}
 
 [[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
