*Empty MediaWiki Message*

--- a/Lee_Dong_Wook.mw
+++ b/Lee_Dong_Wook.mw
@@ -46,3 +46,4 @@ V-NESS Screen Award (1999)
 * [http://www.ampedasia.com/hunks/Lee-Dong-Wook/ Lee Dong Wook Images and Profile]
 
 [[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
