--- a/Tiffany_Hwang.mw
+++ b/Tiffany_Hwang.mw
@@ -7,3 +7,4 @@ I '''Stephanie Young Hwang''' ([[Amanung Koreanu|Koreanu]]: 황미영, [[Hanja]]
 {{Suli}}
 
 [[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
