--- a/Yoon_Joo-sang.mw
+++ b/Yoon_Joo-sang.mw
@@ -5,3 +5,4 @@ I '''Yoon Joo-sang''' ([[Hangul]]: 윤주상, [[Hanja]]: 尹周相), metung yang
 {{stub|Mauling Korea}}
 
 [[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
