--- a/BoA.mw
+++ b/BoA.mw
@@ -44,3 +44,4 @@ I '''BoA''' (Kwon Bo Ah) metung yang [[talakanta]] ampong [[manenerak]] king [[H
 {{Stub}}
 
 [[Category:Korea]]
+[[Category:Deng Koreanu]]
