*Empty MediaWiki Message*

--- a/Choi_Siwon.mw
+++ b/Choi_Siwon.mw
@@ -7,3 +7,6 @@ I '''Choi Shi-won''' ([[:tl:Wikang Koreano|Koreanu]]: 최시원, [[:en:Hanja|Han
 * [http://weibo.com/choisiwonkr Choi Siwon] king [[Weibo]]
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
