--- a/4Minute.mw
+++ b/4Minute.mw
@@ -5,4 +5,6 @@ Ing '''4Minute''' (포미닛), metung yang banda king [[Mauling Korea]].
 * {{Official website|4min.co.kr}}
 * {{Official website|4minute-japan.com|Official Japanese website}}
 
-[[cz:4Minute]]
+[[Category:Korea]]
+[[Category:Mauling Korea]]
+[[Category:Musika king Mauling Korea]]
