--- a/Super_Junior.mw
+++ b/Super_Junior.mw
@@ -2,3 +2,5 @@
 Ing '''Super Junior''' metung yang grupung talakanta king [[Mauling Korea]].
 <br>
 {{Stub}}
+
+[[Category:Musika king Mauling Korea]]
