*Empty MediaWiki Message*

--- a/GOT7.mw
+++ b/GOT7.mw
@@ -38,3 +38,4 @@ Ing '''GOT7''' ([[Hangul]]: 갓세븐), metung yang banda king [[Mauling Korea]]
 {{suli}}
 
 [[Category:Mauling Korea]]
+[[Category:Musika king Mauling Korea]]
