--- a/Girls'_Generation.mw
+++ b/Girls'_Generation.mw
@@ -1,3 +1,5 @@
 [[File:SNSD Cooky Phone.jpg|thumb|350px|right|Girls' Generation para king Cooky Phone]]
 Ing '''Girls' Generation''' (소녀시대 [Sonyeo Sidae], 少女時代 [Shoujo Jidai, Síunéuih Sìhdoih]) metung yang grupung talakanta king [[Mauling Korea]].
 {{stub}}
+
+[[Category:Musika king Mauling Korea]]
