--- a/Sandara_Park.mw
+++ b/Sandara_Park.mw
@@ -1,4 +1,4 @@
-I '''Sandara Park''' (mekilala ya bilang '''Dara''') metung yang talakanta at talaterak king [[Mauling Korea]]. Megi yang artista at talakanta sadya king [[Pilipinas]].
+I '''Sandara Park''' (mekilala ya bilang '''Dara''') metung yang talakanta at talaterak king [[Mauling Korea]]. Megi yang artista at talakanta sadya king [[Pilipinas]]. Ngeni, metung yang miyembru ning bandang [[2NE1]].
 
 ==Suglung Palwal==
 * [http://twitter.com/krungy21 Sandara Park] king [[Twitter]]
@@ -6,3 +6,6 @@ I '''Sandara Park''' (mekilala ya bilang '''Dara''') metung yang talakanta at ta
 * [http://weibo.com/daraxxicn Sandara Park] king [[Sina Weibo]]
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
