--- a/Big_Bang_(Mauling_Koreanung_banda).mw
+++ b/Big_Bang_(Mauling_Koreanung_banda).mw
@@ -3,3 +3,5 @@ Ing '''Big Bang''' (maka-estilung '''BIGBANG''') metung yang banda king [[Maulin
 </br>
 
 {{stub}}
+
+[[Category:Musika king Mauling Korea]]
