--- a/Yunho.mw
+++ b/Yunho.mw
@@ -5,3 +5,6 @@ I '''Jung Yunho''' (mibait Pebreru 6, 1986), mas mekilala ya bilang '''U-Know Yu
 *2012 3rd Annual Barbie & Ken Awards - Korean Ken
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
