--- a/Changmin.mw
+++ b/Changmin.mw
@@ -6,3 +6,6 @@ I '''Shim Changmin''', mas mekilala ya bilang '''Max Changmin''', metung yang ta
 *37th annual [[Hochi Film Award|Hochi Film Awards]]: Newcomer Award - Nominated
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
