--- a/SE7EN.mw
+++ b/SE7EN.mw
@@ -1,3 +1,6 @@
 I '''Choi Dong Wook''' (mas mekilala ya bilang '''SE7EN''') metung yang manganganta at manenerak king [[Mauling Korea]].
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
