--- a/Sung_Jae-ki.mw
+++ b/Sung_Jae-ki.mw
@@ -13,7 +13,7 @@
 
 Y '''Sung Jae-ki''' (Korean:성재기 成在基, [[Septiembri 11]] [[1967]] - [[Juliu 26]], [[2013]]) metung yang [[Mauling Korea]] Human right activist, Civil right activist<ref>[http://english.yonhapnews.co.kr/news/2013/07/27/0200000000AEN20130727001300320.html Police continue search for missing men's rights activist] yonhapnews {{en}}</ref>, liberalism Philosophers.
 
-In 2013, Sung metung yang suicide<ref>[http://stream.aljazeera.com/story/201307292238-0022943 South Korean channel films suicide] {{en}}</ref>, opposite of sex discrimination [[Mauling Korea]].
+Anyang 2013, Sung metung yang suicide<ref>[http://stream.aljazeera.com/story/201307292238-0022943 South Korean channel films suicide] {{en}}</ref>, opposite of sex discrimination [[Mauling Korea]].
 
 == Aliwapa ==
 * [http://twitter.com/sungjaegi twitter of Sung Jae-ki] (Korea)
@@ -37,4 +37,5 @@ In 2013, Sung metung yang suicide<ref>[http://stream.aljazeera.com/story/2013072
 {{stub}}
 
 [[Category:Semi-protected|{{PAGENAME}}]]
+[[Category:Deng Koreanu]]
 [[Category:Mauling Korea]]
