--- a/SHINee.mw
+++ b/SHINee.mw
@@ -2,3 +2,5 @@
 Ing '''SHINee''' ([[Amanung Koreanu|Koreanu]]:샤이니, [[Amanung Hapones|Hapones]]: シャイニー) metung yang grupung talakanta king [[Mauling Korea]].
 
 {{stub}}
+
+[[Category:Musika king Mauling Korea]]
