--- a/Cho_Kyuhyun.mw
+++ b/Cho_Kyuhyun.mw
@@ -9,3 +9,6 @@ I '''Cho Kyuhyun''' ([[Hangul]]: 조규현, [[Hanja]]: 曺圭賢), metung yang [
 * [http://kyuhyun.smtown.com Opisyal a Sityu]
 
 {{Suli}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
