--- a/TVXQ.mw
+++ b/TVXQ.mw
@@ -1,5 +1,7 @@
 [[Image:TVXQ in Paris France cropped.JPG|thumb|350px|right|TVXQ king Paris anyang 2007]]
 Ing '''TVXQ''' (東方神起, 동방신기) metung yang grupung talakanta king [[Mauling Korea]].
 <br>
-</ br>
+
 {{stub}}
+
+[[Category:Musika king Mauling Korea]]
