--- a/Lee_Min-ho.mw
+++ b/Lee_Min-ho.mw
@@ -6,3 +6,6 @@ I '''Lee Min-ho''' ([[Hangul]]: 이민호; [[Hanja]]: 李敏鎬, mibait Hunyu 22
 * [http://www.minho.jp/ Official Japanese Website] '''(Hapones)'''
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
