--- a/Park_Bom.mw
+++ b/Park_Bom.mw
@@ -1,7 +1,9 @@
-I '''Park Bom''' (박봄), metung yang talakanta king [[Mauling Korea]].
+I '''Park Bom''' (박봄), metung yang talakanta king [[Mauling Korea]]. Metung yang miyembru ning grupung [[2NE1]].
 
 ==Suglung Palwal==
 * [http://www.yg-2ne1.com 2NE1 official site]
 * [http://twitter.com/haroobomkum Park Bom] king [[Twitter]]
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
