--- a/Taecyeon.mw
+++ b/Taecyeon.mw
@@ -1,3 +1,6 @@
 I '''Ok Taec-Yeon''' ([[Hangul]]: 옥택연, [[Hanja]]: 玉澤演) metung yang talakanta king [[Mauling Korea]].
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
