--- a/Red_Velvet_(banda).mw
+++ b/Red_Velvet_(banda).mw
@@ -6,3 +6,5 @@ Ing '''Red Velvet''' ([[Hangul]]: 레드벨벳), metung yang banda king [[Maulin
 *[http://instagram.com/redvelvet.smtown Red Velvet] king [[:en:Instagram|Instagram]]
 
 {{Suli}}
+
+[[Category:Musika king Mauling Korea]]
