--- a/Rain_(talakanta).mw
+++ b/Rain_(talakanta).mw
@@ -3,3 +3,6 @@
 I '''Jung Ji Hoon''' (mas mekilala ya bilang '''Rain''') metung yang manganganta at manenerak king [[Mauling Korea]].
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
