--- a/Wonder_Girls.mw
+++ b/Wonder_Girls.mw
@@ -8,5 +8,7 @@ Ing '''Wonders Girls''' metung yang grupung talakanta king [[Mauling Korea]].
 * [http://www.facebook.com/wondergirlsworld Wonder Girls's Facebook]
 * [http://www.myspace.com/wondergirlsusa Wonder Girls's Myspace]
 
-
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
