--- a/Wonder_Girls.mw
+++ b/Wonder_Girls.mw
@@ -12,3 +12,4 @@ Ing '''Wonders Girls''' metung yang grupung talakanta king [[Mauling Korea]].
 
 [[Category:Deng artista king Mauling Korea]]
 [[Category:Deng Koreanu]]
+[[Category:Musika king Mauling Korea]]
