--- a/EXO_(banda).mw
+++ b/EXO_(banda).mw
@@ -6,4 +6,5 @@ Ing '''EXO''' metung yang bandang talakantang [[Tsinu]]-[[Mauling Koreanu]] king
 
 {{stub}}
 
-]
+
+[[Category:Musika king Mauling Korea]]
