--- a/Kwon_Sang-woo.mw
+++ b/Kwon_Sang-woo.mw
@@ -128,3 +128,5 @@ I '''Kwon Sang-woo''' ([[Hangul]]: 권상우, [[Hanja]]: 權相佑), metung yang
 
 [[Category:1976 Kebaitan]]
 [[Category:Deng artista ibat Mauling Korea]]
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
