--- a/Bangtan_Boys.mw
+++ b/Bangtan_Boys.mw
@@ -22,3 +22,5 @@ Ing '''Bangtan Boys''' ([[Hangul]]: 방탄소년단, Bangtan Sonyeondan), a yaws
 * [http://bts.ibighit.com/ Opisyal na Sityo]
 
 {{suli}}
+
+[[Category:Musika king Mauling Korea]]
