--- a/Ailee.mw
+++ b/Ailee.mw
@@ -1,3 +1,7 @@
 I '''Amy Lee''' ([[Lagyung Koreanu]]: '''Lee Yejin'''; [[Hangul]]: 이예진; [[Hanja]]: 李藝眞, mibait [[Mayu 30]], [[1989]]), mas mekilala ya bilang '''Ailee''', metung yang talakanta king [[Mauling Korea]].
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
+[[Category:Musika king Mauling Korea]]
