--- a/Lee_Donghae.mw
+++ b/Lee_Donghae.mw
@@ -1,3 +1,7 @@
-I '''Lee Dong-hae''' ([[:tl:Wikang Koreano|Koreanu]]: 이동해, [[:en:Hanja|Hanja]]: 李東海), a mas mekilala ya bilang '''Donghae''', metung yang talakanta ampo talaterak king [[Mauling Korea]].
+I '''Lee Dong-hae''' ([[:tl:Wikang Koreano|Koreanu]]: 이동해, [[:en:Hanja|Hanja]]: 李東海), a mas mekilala ya bilang '''Donghae''', metung yang talakanta ampo talaterak king [[Mauling Korea]]. Metung yang miyembru ning grupung [[Super Junior]].
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
+[[Category:Musika king Mauling Korea]]
