--- a/Daniel_Henney.mw
+++ b/Daniel_Henney.mw
@@ -1,3 +1,6 @@
-I '''Daniel Henney''' (다니엘 헤니) metung yang [[America]]nung artista king [[Mauling Korea]].
+I '''Daniel Henney''' (다니엘 헤니) metung yang Amerikanung artista king [[Mauling Korea]].
 
 {{stub}}
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
