--- a/Henry_Lau.mw
+++ b/Henry_Lau.mw
@@ -65,3 +65,5 @@ I '''Henry Lau''' (Oktubri 11, 1989, [[Toronto]], [[Ontario]]), mas mekilala yan
 * [https://instagram.com/henryl89 Henry] king [[Instagram]]
 
 {{Suli}}
+
+[[Category:Musika king Mauling Korea]]
