--- a/Sun_Myung_Moon.mw
+++ b/Sun_Myung_Moon.mw
@@ -88,6 +88,7 @@ I Moon ampo ing asawa na, i [[Hak Ja Han Moon]], atin lang labing apat a anak, a
 {{DEFAULTSORT:Moon, Sun Myung}}
 [[Category:1920 kebaitan]]
 [[Category:Converts to Presbyterianism]]
+[[Category:Deng Koreanu]]
 [[Category:Former Presbyterians]]
 [[Category:Founders of religions]]
 [[Category:Living people]]
