--- a/PSY.mw
+++ b/PSY.mw
@@ -77,3 +77,7 @@ Anyang Octubre 23, 2012, mikit ya i PSY ampo i ing Pangkabilugan a Kalihim (''Se
 [[Category:Boston University alumni]]
 [[Category:Berklee College of Music alumni]]
 [[Category:People from Seoul]]
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
+[[Category:Musika king Mauling Korea]]
