--- a/Han_Ji-hye.mw
+++ b/Han_Ji-hye.mw
@@ -48,3 +48,6 @@ I '''Han Ji-hye''' (mibait a Lee Ji-hye anyang Junio 29, 1984) metung yang artis
 [[Category:People from Gwangju]]
 [[Category:1984 births]]
 [[Category:Living people]]
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
