--- a/Lee_Myung-se.mw
+++ b/Lee_Myung-se.mw
@@ -36,6 +36,7 @@ Migumpisa ing karera nang Lee antimong metung a assistant producer king lalam na
 {{DEFAULTSORT:Lee, Myung-se}}
 [[Category:1957 births]]
 [[Category:1957 kebaitan]]
+[[Category:Deng Koreanu]]
 [[Category:Mabieng tau]]
 [[Category:Living people]]
 [[Category:South Korean film directors]]
