--- a/Lee_Seung_Gi.mw
+++ b/Lee_Seung_Gi.mw
@@ -27,7 +27,7 @@
 }}
 {{Korean name|Lee}}
 
-I '''Lee Seung-gi''' (mibait 13 Enero 1987) metung yang [[Mauling Korea]]nung magkanta, artista ampong actor [[MC]]. Sikat ya i Lee antimong linage king mumunang panaun o ''season'' ning palageng  ''weekend variety'' a  ''[[1 Night 2 Days]]'' manibat Noviembre 2007 anggang  Febrero 2012, ampong [[MC]] ning ''talk show'' a ''[[Strong Heart (Koreanung palageng telebisyon)|Strong Heart]]'' manibat Octubre 2009 anggang Abril 2012.
+I '''Lee Seung-gi''' (mibait 13 Enero 1987) metung yang [[Mauling Korea]]nung talakanta, artista ampong actor [[MC]]. Sikat ya i Lee anti mung linage king mumunang panaun o ''season'' ning palageng  ''weekend variety'' a  ''[[1 Night 2 Days]]'' manibat Noviembre 2007 anggang  Febrero 2012, ampong [[MC]] ning ''talk show'' a ''[[Strong Heart (Koreanung palageng telebisyon)|Strong Heart]]'' manibat Octubre 2009 anggang Abril 2012.
 
 ==Dalerayan==
 {{Reflist}}
@@ -58,3 +58,7 @@ I '''Lee Seung-gi''' (mibait 13 Enero 1987) metung yang [[Mauling Korea]]nung ma
 [[Category:South Korean television actors]]
 [[Category:Dongguk University alumni]]
 [[Category:Running Man (TV series) contestants]]
+
+[[Category:Deng artista king Mauling Korea]]
+[[Category:Deng Koreanu]]
+[[Category:Musika king Mauling Korea]]
