--- a/YG_Entertainment.mw
+++ b/YG_Entertainment.mw
@@ -4,3 +4,5 @@ Ing '''YG Entertainment''' ([[Hangul]]:  YG 엔터테인먼트), metung yang ahe
 * [http://ygfamily.com/index.asp Opisyal a Sityu]
 
 {{stub}}
+
+[[Category:Musika king Mauling Korea]]
