--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -18,9 +18,9 @@
 | demographics2_info1     = [[Pampanga]] (71%),[[Tarlac]] (50%) & [[Bataan]] (4%)  
 }}
 
-The '''Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.'''<ref>{{cite news|author1=United Nation|title=Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. (United Nations Profile)|url=https://esango.un.org/civilsociety/simpleSearch.do;jsessionid=09BA2BCA63F958E19665FB337C47A7B1?method=search&searchTypeRedef=simpleSearch&sessionCheck=false&searchType=simpleSearch&organizationNamee=kapampangan+ku+pagmaragul+ku}}</ref> is a Filipino Nonprofit Charitable Organization which was initially established on September 18, 2011 by Jetlee Y. Tiongco.<ref>{{cite news|author1=Navales, Reynaldo G. (September 21, 2014)|title=Kapampangan FB group to continue mission for poor|url=http://www.sunstar.com.ph/pampanga/local-news/2014/09/21/kapampangan-fb-group-continue-mission-poor-366817|accessdate=20 January 2015|publisher=Suns Star Pampanga}}</ref> The KKPK Board of Directors, Advisers, Officers & Members living in [[Pampanga]],<ref name=SunStar358956>{{cite news|last1=Navales|first1=Reynaldo G.|title=Kapampangan group donates food packages to orphanage|url=http://www.sunstar.com.ph/pampanga/local-news/2014/08/10/kapampangan-group-donates-food-packages-orphanage-358956|accessdate=14 January 2015|agency=SunStar Pampanga|publisher=SunStar Publishing|date=10 August 2014}}</ref> [[Tarlac]], [[Bataan]]<ref name=SunStar358956 /><ref>{{cite web|last1=There was also a distribution of seeds and pesticides by|title=Kapampangan Ku Pagmaragul Ku|url=http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service|website=Official Website of Municipality of Sta Rita, Pampanga|accessdate=28 March 2015}}</ref> and in the other countries.  
+The '''Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.'''<ref>{{cite news|author1=United Nation|title=Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. (United Nations Profile)|url=https://esango.un.org/civilsociety/simpleSearch.do;jsessionid=09BA2BCA63F958E19665FB337C47A7B1?method=search&searchTypeRedef=simpleSearch&sessionCheck=false&searchType=simpleSearch&organizationNamee=kapampangan+ku+pagmaragul+ku}}</ref> is a Filipino Nonprofit Charitable Organization which was initially established on September 18, 2011 by Jetlee Y. Tiongco.<ref>{{cite news|author1=Navales, Reynaldo G. (September 21, 2014)|title=Kapampangan FB group to continue mission for poor|url=http://www.sunstar.com.ph/pampanga/local-news/2014/09/21/kapampangan-fb-group-continue-mission-poor-366817|accessdate=20 January 2015|publisher=Suns Star Pampanga}}</ref> The KKPK Board of Directors, Board of Administrators, Advisers, Officers & Members living in [[Pampanga]],<ref name=SunStar358956>{{cite news|last1=Navales|first1=Reynaldo G.|title=Kapampangan group donates food packages to orphanage|url=http://www.sunstar.com.ph/pampanga/local-news/2014/08/10/kapampangan-group-donates-food-packages-orphanage-358956|accessdate=14 January 2015|agency=SunStar Pampanga|publisher=SunStar Publishing|date=10 August 2014}}</ref> [[Tarlac]], [[Bataan]]<ref name=SunStar358956 /><ref>{{cite web|last1=There was also a distribution of seeds and pesticides by|title=Kapampangan Ku Pagmaragul Ku|url=http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service|website=Official Website of Municipality of Sta Rita, Pampanga|accessdate=28 March 2015}}</ref> and in the other countries.  
 
-KKPK main objectives is to united the [[Kapampangan people|Kapampangan]] people, to Provide Services, Agricultural & Environmental Services. To ensure the equitable transformation and unity of Kapampangan people. With these Platform, the KKPK regularly held a mission in different areas of Pampanga and Tarlac in a different activities, such as gift giving to elderly, Clean-up drive, Tree Planting, Distribution of Vegetable Seeds and Seedlings<ref>[http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service There was also a distribution of seeds and pesticides by "Kapampangan Ku Pagmaragul Ku". (Municipality of Sta Rita Official Website)]</ref> 
+KKPK main objectives is to united the [[Kapampangan people|Kapampangan]] people, to Provide Services, Agricultural & Environmental Services. To ensure the equitable transformation and unity of Kapampangan people. With these Platform, the KKPK regularly held a mission in different areas of Pampanga and Tarlac in a different activities, such as gift giving to elderly, Orphanage Clean-up drive, Tree Planting, Distribution of Vegetable Seeds and Seedlings<ref>[http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service There was also a distribution of seeds and pesticides by "Kapampangan Ku Pagmaragul Ku". (Municipality of Sta Rita Official Website)]</ref> 
 
 
 ==Particular Objectives==
