--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -47,7 +47,8 @@ The Founder is [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg 
 ==External links==
 *{{facebook|kapampangankupagmaragulku2012}} Fan Page
 *[https://www.facebook.com/groups/kapampangankupagmaragulku2011/ Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.] on [[Facebook]] Group
-* [https://twitter.com/kkpkintofficial @KKPKIntOfficial] on [[Twitter]]
+*[https://twitter.com/kkpkintofficial @KKPKIntOfficial] on [[Twitter]]
+*[https://instagram.com/kkpkintlofficial/ kkpkintlofficial] on [[Instagram]]
 *[http://kkpkintl.zyro.com/ Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. Official Website]
 *[http://www.sunstar.com.ph/pampanga/local-news/2015/01/21/kapampangan-facebook-group-host-social-service-program-387861 Kapampangan Facebook group to host social service program. By Ian Ocampo Flora of Sunstar Pampanga]
 *[http://www.youtube.com/watch?v=E0JTTBuWlu4 KKPK queng TV Patrol Pampanga]
