--- a/Cabeza_la_Vaca.mw
+++ b/Cabeza_la_Vaca.mw
@@ -36,6 +36,7 @@ footnotes = |
 
 Ing '''Cabeza la Vaca''' metung yang balen king [[Badajoz (lalawigan)|lalawigan ning Badajoz]], [[Extremadura]], [[Espanya]]. Agpang keng [[2006]] [[census]] ([[Instituto Nacional de Estadística (Spain)|INE]]), ing balen atin yang populasyun a 1620 pakatuknang.
 
+{{Commonscat|Cabeza la Vaca}}
 
 {{Municipalities in Badajoz}}
 
