One picture in higher resolution

--- a/Kroasia.mw
+++ b/Kroasia.mw
@@ -94,7 +94,7 @@ Ing Croatia makadake ya kareng 20 counties (''županija'') at ing kayang tungku 
 
 [[File:ZagrebHZ.jpg|thumb|right|165px|[[Croatian Railways]] headquarters in [[Zagreb]]]]
 
-[[File:The Arena, Pula.jpg|thumb|left|[[Arena (colosseum)|Arena]], the Roman amphitheatre in [[Pula]]]]
+[[File:Croatia Pula Amphitheatre 2014-10-11 11-04-27.jpg|thumb|left|[[Arena (colosseum)|Arena]], the Roman amphitheatre in [[Pula]]]]
 
 == Suglung Palwal ==
 {{portal}}
