*Empty MediaWiki Message*

--- a/Pun_Bulung.mw
+++ b/Pun_Bulung.mw
@@ -77,20 +77,20 @@ For non-Kapampangan speakers, please proceed to [[Wikipedia:Guestbook and Help f
 
 
 ===Eganaganang kategorya===
-*<div style="color:#642; background:#fffaec;">'''Sikluban''': [[:category:Astronomia|Astronomia (Pamagaral Banua)]] - [[:category:Fisica|Fisica]] - [[:category:Matematica|Matematica (Pamagaral Bilangan)]] - [[:category:Quimica|Quimica]] - [[:category:Geologia|Geologia (Pamagaral Yatu)]]...</div>
-*<div style="color:#060; background:#f6fff6;">'''Bye''': [[:category:Biologia|Biolohiya (Pamagaral Bye)]]...</div>
-*<div style="color:#060; background:#f6fff6;">'''Science (Kabiyasnan)''': [[:category:Kabiasnan|Kabiyasnan (Science)]] - [[:category:Kabulasan|Kabulasan]] - [[:category:agricultura|Agrikultura]] - [[:category:Pamanese Animal|Pamanese Animal]] - [[:category:asan|Asan]]...</div>
+*<div style="color:#642; background:#fffaec;">'''Sikluban''': [[:category:Astronomiya|Astronomiya (Pamagaral Banua)]] - [[:category:Pisika|Pisika]] - [[:category:Matematika|Matematika (Pamagaral Bilangan)]] - [[:category:Kimika|Kimika]] - [[:category:Heolohiya|Heolohiya (Pamagaral Yatu)]]</div>
+*<div style="color:#060; background:#f6fff6;">'''Bye''': [[:category:Biolohiya|Biolohiya (Pamagaral Bye)]]</div>
+*<div style="color:#060; background:#f6fff6;">'''Science (Kabiyasnan)''': [[:category:Kabiasnan|Kabiyasnan (Science)]] - [[:category:Kabulasan|Kabulasan]] - [[:category:agricultura|Agrikultura]] - [[:category:Pamanese Animal|Pamanese Animal]] - [[:category:asan|Asan]]</div>
 *<div style="color:#444; background:#f8f8f8;">'''Teknika''': [[:categoría:Informática|Informatika]] - [[:category:Engineering|Engineering]] - [[:category:Telecomunicacion|Telekomunikasyon]] - [[:Category:Palimpatan|Palimpatan]] - [[:category:industria|Industriya]]...</div>
 *<div style="color:#008; background:#f8f8ff;">'''Yatu''': [[:category:Amlat|Amlat (Kasalesayan)]] - He[[:category:Geografía|ograpiya]] - [[:category:Antropologia|Antropolohiya]] - [[:categoría:Linguistica|Linggwistika (Garalitang Mayaktangan)]] - [[:categoría:Religion|Relihiyon (Kasalpantayanan)]] - [[:category:Pamangan|Pamangan]] - [[:category:Isports|Isports (Pasiknangan)]]...</div>
-*<div style="color:#606; background:#fff0ff;">'''Arte''': [[:category:Arquitectura|Arkitektura]] - S[[:category:Cine|ine]] - [[:category:terak|Terak]] - K[[:categoría:Cultura|ultura (Kalinangan)]] - P[[:category:Fotografía|otograpiya (Pamaglarauan)]] -  [[:categoría:Literatura|Literatura (Malagung Panyulat)]] - [[:categoría:Música|Musika (Tigtigan)]] - [[:categoría:Pamamintura|Pamamintura]] - [[:categoría:Teatro|Teatru]] - [[:categoría:Piyalben|Piyalben]] - [[:categoría:Lalang Gamat|Lalang Gamat]] - [[:categoría:Pamangulis|Pamangulis]]...</div> 
-*<div style="color:#800; background:#fff8f8;">'''Sociedad''': [[:categoría:Sociología|Sosyolohiya]] - [[:Category:Politika|Politika]] -  [[:categoría:Leyi|Leyi]] - [[:categoría:Economía|Ekonomiya]] - [[:categoría:Educación|Edukasyon (Pamagaral)]] - [[:categoría:Filosofia|Pilosopiya]] - [[:categoría:Psicologia|Sikolohiya]]...</div>
+*<div style="color:#606; background:#fff0ff;">'''Arte''': [[:category:Arquitectura|Arkitektura]] - S[[:category:Cine|ine]] - [[:category:terak|Terak]] - K[[:categoría:Cultura|ultura (Kalinangan)]] - P[[:category:Fotografía|otograpiya (Pamaglarauan)]] -  [[:categoría:Literatura|Literatura (Malagung Panyulat)]] - [[:categoría:Música|Musika (Tigtigan)]] - [[:categoría:Pamamintura|Pamamintura]] - [[:categoría:Teatro|Teatru]] - [[:categoría:Piyalben|Piyalben]] - [[:categoría:Lalang Gamat|Lalang Gamat]] - [[:categoría:Pamangulis|Pamangulis]]</div> 
+*<div style="color:#800; background:#fff8f8;">'''Sociedad''': [[:categoría:Sociología|Sosyolohiya]] - [[:Category:Politika|Politika]] -  [[:categoría:Leyi|Leyi]] - [[:categoría:Economía|Ekonomiya]] - [[:categoría:Educación|Edukasyon (Pamagaral)]] - [[:categoría:Filosofia|Pilosopiya]] - [[:categoría:Psicologia|Sikolohiya]]</div>
 
 ===Ing Sikluban a Kapampangan===
 *[[Kawatasan|Kawatasan (Poetry)]]
-*[[Kuentu, Nobela, Prosa]]
+*[[Kuwentu, Nobela, Prosa]]
 *[[Crissotan]]  
 *[[Talabaldugan|Talabaldugan (Glossary)]]
-*[[Teatro]]
+*[[Teatru]]
 *[[Bayaning Kapampangan]]
 *[[Lakaran king Kasulung ning Kalinangan at Pamipagaral Kapampangan]]
 
