/* Deng kataya ampo reng karelang kabaldugan */ +img

--- a/Pangabuktut.mw
+++ b/Pangabuktut.mw
@@ -169,6 +169,7 @@ pamanganak, lon la reti:
 * [[:en:Pamanalkus at Pamandagul ning anak|Child development]]
 
 == Deng kataya ampo reng karelang kabaldugan ==
+[[File:Anatomia uteri humani gravidi V00001 00000002.tif|thumb|[[William Hunter]], ''Anatomia uteri humani gravidi tabulis illustrata'', 1774]]
 
 * TECHNICAL
 * ''zygote'' - manibat king fertilization angga king kadwang cell division
@@ -208,7 +209,6 @@ bilang da reng mekikwan, z = bilang da reng ának a mabye; alimbawa, ing G4P1-2-
 ya ing mibait king ustung panaun, adwa (2) la reng mibait bayu king ustung 
 panaun, metung (1) ya ing kikwan, at atlu (3) la reng eganaganang ának a mabye 
 (metung [1] a mibait king ustung panaun at adwa [2] bayu ing ustung panaun).
-
 
 == Lon la murin deti ==
 {{commons|Category:Pregnancy}}
