--- a/Pangabuktut.mw
+++ b/Pangabuktut.mw
@@ -1,5 +1,6 @@
-:''Para king mas malaparan a panga-isplica king pangabuktut kareng [[mammal]], lon ya ing [[:en:mammalian pregnancy]]. 
-Para king paglalawe ning medicina king pangabuktut, lon ya ing [[:en:Obstetrics]].''
+:''Para king mas malaparan a panga-eksplika king pangabuktut kareng [[mammal]], lon ya ing [[:en:mammalian pregnancy]]. ''
+:''Para king paglalawe ning medisina king pangabuktut, lon ya ing [[:en:Obstetrics]].''
+''<nowiki/>''
 
 [[File:PregnantWoman.jpg|thumb|Metung a babaing mabuktut]]
 Ing '''pangabuktut''' ing pamandala king metung o maygit pang [[embryo]] o 
@@ -143,7 +144,7 @@ la nung meyatrasu yang mapilang aldo o duminggu ing karelang regla
 * matas a B-hcG anggang 100,000 mIU/mL karas king apulung (10) duminggu ning 
 pangabuktut
 
-== Birth ==
+== Kebaitan ==
 {{main|Childbirth}}
 == Ing pangabait ==
 {{main|Ing pamanganak}}
